style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html, body{
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  background-color: black;
  /* scroll-padding-top: 155px;  */
  scroll-padding-top: 15%;
}

.center {
  text-align: center;
  width: 100%;
}

.my-class{
  padding-top: 0rem;
  padding-bottom: 0rem;
  color: #FFFFFF;
}

.navbar{
  padding: .8rem;
  border-bottom:5px solid #FFFFFF;
}

.navbar-nav > li{
    padding-left:30px;
    padding-right:30px;
}

.navbar-custom{
    background-color: black;
}

.nav-link{
  font-size: 1.1em !important;
  color: #FFFFFF;
}

.nav-item{
    font-size: 1.1em !important;
    color: #FFFFFF;
  }

.nav-text{
    font-size: 1.1em !important;
}

.img-fluid{
  max-width: 100%;
  height: auto;
  position: relative;
}

.storefront:before {
  height: 154px;
  content: "";
  display:block;
}

.storefront{
    padding-top: 0rem;
    padding-bottom: 0rem;
}

.storefront-img{
    border: 4px solid #cc9a33;
}

.carousel:before {
  height: 154px;
  content: "";
  display:block;
}

.carousel-item {
  height: 80vh;
  max-height: 80vh;
  min-height: 350px;
  background: no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  object-fit: cover !important;
  overflow: hidden !important;
  background-position: 50% 50%;
}

.carousel-item.active,
.carousel-item-next,
.carousel-item-prev {
  display: block !important;
}

.carousel-inner{
  max-height: 80vh;
}

.menu:before {
  content: "";
  display:block;
}

.menu{
    padding-top: 0rem;
    padding-bottom: 0rem;
  }
.menu h2{
    text-align: center;
    color: #FFFFFF;
  }

  .contact{
    padding-top: 0rem;
  }
.contact h2{
    text-align: center;
    color: #FFFFFF;
  }

.contact p{
  color: #FFF;
}

.logo-header{
    /* position: relative;
    width: 20%;
    height: auto;
    z-index: -1; */
    max-width: 350px;
    max-height: 100px;
}

.padding{
  padding-bottom: 2rem;
}

.welcome{
  width:75%;
  margin: 0 auto;
  padding-top: 2rem;
}

hr{
  border-top: 2px solid #b4b4b4;
  width:35%;
  margin-top: .3rem;
  margin-bottom: .1rem;
  padding-bottom: 1rem;
}

.fa-phone, .fa-map-pin{
    font-size: 4em;
    margin: 1rem;
    color: #FFF;
  }

  .fas{
      font-size: 4em;
      margin: 1rem;
      color: #FFF;
  }

/*---Media Queries --*/
@media (max-width: 992px) {

  }
@media (max-width: 768px) {
  .card-img-top{
    width: 100%;
    height: 60vw;
    object-fit: cover;
  }
  .carousel:before {
    height: 154px;
    content: "";
    display:block;
  }
  
  .carousel-item {
    height: 80vh;
    max-height: 80vh;
    min-height: 350px;
    background: no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    object-fit: cover !important;
    background-position: 50% 50%;
  }

  .carousel-inner{
    max-height: 80vh;
  }

  .navbar-fixed-top {
      position: relative;
      top: auto;
  }
  .navbar-collapse {
      max-height: none;
  }
  body {
      margin: 0;
  }
}
@media (max-width: 576px) {
  body{
    scroll-padding-top: 20%;
    margin: 0;
  }
  .storefront:before {
    height: 154px;
    content: "";
    display:block;
  }
  .navbar{
    padding: .8rem;
    border-bottom:5px solid #FFFFFF;
  }
  .menu:before {
    content: "";
    display:block;
  }
  .img-fluid{
    max-width: 100%;
    height: auto;
    position: relative;
  }
  .logo-header{
    position: relative;
    width: 20%;
    height: auto;
    z-index: -1;
}
  .card-img-top{
    width: 100%;
    height: 60vw;
    object-fit: cover;
  }
  .carousel:before {
    height: 154px;
    content: "";
    display:block;
  }
  
  .carousel-item {
    height: 80vh;
    max-height: 80vh;
    min-height: 350px;
    background: no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    object-fit: cover !important;
    background-position: 50% 50%;
  }

  .carousel-inner{
    max-height: 80vh;
  }

  .navbar-fixed-top {
    position: relative;
    top: auto;
  }
  .navbar-collapse {
      max-height: none;
  }
}

/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Fixed Background Image --*/
figure {
  position: relative;
  width: 100%;
  height: 60%;
  margin: 0!important;
}
.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url('img/mac.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}





/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap
Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }
Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }
Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }
Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

